# docker-practice

./: compose.yaml
hello/: Dockerfile.dev  README.md  pyproject.toml
hello/app/: main.py
hello/tests/: test_main.py
